k8s/helpdesk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk-app
  namespace: helpdesk

spec:
  replicas: 3
  selector:
    matchLabels:
      app: helpdesk-app

  template:
    metadata:
      labels:
        app: helpdesk-app

    spec:
      automountServiceAccountToken: false

      containers:
        - name: helpdesk-app-container
          image: saurabhbara110/helpdesk-app:15
          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "256Mi"
            limits:
              memory: "256Mi"
