k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: helpdesk

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres-container
          image: postgres:18
          ports:
            - containerPort: 5432

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "256Mi"
            limits:
              memory: "256Mi"

          volumeMounts:
            - name: postgres-initdb
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: postgres-initdb
          configMap:
            name: postgres-initdb
