k8s/helpdesk-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helpdesk
  namespace: helpdesk

spec:

  selector:
    app: helpdesk-app
  ports:
    - port: 5000
      targetPort: 5000
